--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@web3icons/react": "^4.0.27",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "postcss": "^8.5.6",
